--- a/CatNote.API/appsettings.json
+++ b/CatNote.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CatNote;Trusted_Connection=True;Trust Server Certificate=True;"
+  }
 }
