--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -12,14 +12,11 @@ jobs:
       matrix:
         configuration: [Debug, Release]
 
-    runs-on: windows-latest  # For a list of available runner types, refer to
-                             # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
+    runs-on: windows-latest
 
     env:
-      Solution_Name: CatNote.API.sln                         # Replace with your solution name, i.e. MyWpfApp.sln.
-      Test_Project_Path: CatNote.Tests\CatNote.Tests.csproj                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-      #Wap_Project_Directory: your-wap-project-directory-name     Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
-      #Wap_Project_Path: your-wap-project-path                    Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
+      Solution_Name: CatNote.API.sln                         
+      Test_Project_Path: CatNote.Tests\CatNote.Tests.csproj
 
     steps:
     - name: Checkout
@@ -43,42 +40,3 @@ jobs:
     # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test --no-build --verbosity normal
-      
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-          java-version: 17
-          distribution: 'zulu'
-    - uses: actions/checkout@v3
-      with:
-          fetch-depth: 0
-    - name: Cache SonarCloud packages
-      uses: actions/cache@v3
-      with:
-          #path: ~\sonar\cache
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-    - name: Cache SonarCloud scanner
-      id: cache-sonar-scanner
-      uses: actions/cache@v3
-      with:
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
-    - name: Install SonarCloud scanner
-      if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-      shell: powershell
-      run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-    - name: Build and analyze
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          EXCLUDE_FROM_COVERAGE: "**/Program.cs, **/Middlewares/, **/Validators/, **/Extensions/*,**/Exceptions/, **/Constants/, **/Mappers/, **/Context/**/, **/Migrations/*,**/Configuration/, **/FixtureCustomizations/, **/Managers/*"
-          shell: powershell
-      run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          <dotnet build>
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
