--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -9,6 +9,8 @@ jobs:
   build:
 
     strategy:
+      matrix:
+        configuration: [Release]
     runs-on: ubuntu-latest
 
     steps:
@@ -29,8 +31,6 @@ jobs:
 
     - name: Build the application
       run: dotnet build --no-restore
-
-      configuration: [Release]
 
     # Execute all unit tests in the solution
     - name: Execute unit tests
