--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -9,8 +9,6 @@ jobs:
   build:
 
     strategy:
-      matrix:
-        configuration: [Release]
     runs-on: ubuntu-latest
 
     steps:
@@ -30,7 +28,7 @@ jobs:
       run: dotnet restore
 
     - name: Build the application
-      run: dotnet build --no-restore
+      run: donet build --configuration Resease
 
     # Execute all unit tests in the solution
     - name: Execute unit tests
