--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -9,6 +9,8 @@ jobs:
   build:
 
     strategy:
+      # matrix:
+      #   configuration: [Release]
     runs-on: ubuntu-latest
 
     steps:
@@ -28,7 +30,7 @@ jobs:
       run: dotnet restore
 
     - name: Build the application
-      run: donet build --no-restore --configuration Resease
+      run: dotnet build --no-restore --configuration Resease
 
     # Execute all unit tests in the solution
     - name: Execute unit tests
