--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -7,9 +7,9 @@ on:
 jobs:
 
   build:
-    strategy:
-      matrix:
-        configuration: [Release]
+    # strategy:
+    #   matrix:
+    #     configuration: [Release]
     runs-on: ubuntu-latest
 
     steps:
@@ -29,8 +29,8 @@ jobs:
       run: dotnet restore
 
     - name: Build the application
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore  --configuration release
 
     # Execute all unit tests in the solution
     - name: Execute unit tests
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity details
