--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -29,8 +29,8 @@ jobs:
       run: dotnet restore
 
     - name: Build the application
-      run: dotnet build --no-restore  --configuration release
+      run: dotnet build --no-restore --configuration release
 
     # Execute all unit tests in the solution
     - name: Execute unit tests
-      run: dotnet test --no-build --verbosity details
+      run: dotnet test --no-build --verbosity Detailed
