--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -15,6 +15,9 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Restore NuGet package
+      run: dotnet restore
+
     # Install the .NET Core workload
     - name: Install .NET Core
       uses: actions/setup-dotnet@v3
