--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -15,9 +15,6 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Restore NuGet package
-      run: dotnet restore
-
     # Install the .NET Core workload
     - name: Install .NET Core
       uses: actions/setup-dotnet@v3
@@ -39,10 +36,10 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 17
-        distribution: 'zulu' # Alternative distribution options are available.
+        distribution: 'zulu'
     - uses: actions/checkout@v3
       with:
-        fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+        fetch-depth: 0 
     - name: Cache SonarCloud packages
       uses: actions/cache@v3
       with:
@@ -69,7 +66,9 @@ jobs:
       shell: powershell
       run: |
         .\.sonar\scanner\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-        dotnet build --no-restore --configuration release
+         dotnet restore
+         dotnet build --no-restore 
+         dotnet dotcover test --dcReportType=HTML 
         .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
 
 
