--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -61,7 +61,7 @@ jobs:
         dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
     - name: Build and analyze
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       shell: powershell
       run: |
@@ -70,42 +70,3 @@ jobs:
          dotnet build --no-restore 
          dotnet dotcover test --dcReportType=HTML 
         .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
-
-
-    # - name: Set up JDK 17
-    #   uses: actions/setup-java@v3
-    #   with:
-    #     java-version: 17
-    #     distribution: 'zulu'
-    # - uses: actions/checkout@v3
-    #   with:
-    #     fetch-depth: 0
-    # - name: Cache SonarCloud packages
-    #   uses: actions/cache@v3
-    #   with:
-    #     path: ~\sonar\cache
-    #     key: ${{ runner.os }}-sonar
-    #     restore-keys: ${{ runner.os }}-sonar
-    # - name: Cache SonarCloud scanner
-    #   id: cache-sonar-scanner
-    #   uses: actions/cache@v3
-    #   with:
-    #     path: .\.sonar\scanner
-    #     key: ${{ runner.os }}-sonar-scanner
-    #     restore-keys: ${{ runner.os }}-sonar-scanner
-    # - name: Install SonarCloud scanner
-    #   if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-    #   shell: powershell
-    #   run: |
-    #     New-Item -Path .\.sonar\scanner -ItemType Directory
-    #     dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-    # - name: Build and analyze
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    #   shell: powershell
-    #   run: |
-    #     .\.sonar\scanner\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-    #     dotnet build --no-restore --configuration release
-    #     .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
-    
