--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -59,17 +59,28 @@ jobs:
       run: |
         New-Item -Path .\.sonar\scanner -ItemType Directory
         dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-    - name: Install Code Coverage tool
-        shell: powershell
-        run: dotnet tool install --global JetBrains.dotCover.GlobalTool
-    - name: Build and analyze
+      - name: Build and analyze with code coverage
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       shell: powershell
       run: |
         .\.sonar\scanner\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-         dotnet restore
-         dotnet build --no-restore 
-         dotnet dotcover test --dcReportType=HTML 
+        dotnet restore
+        dotnet build --no-restore 
+        dotnet test --no-restore --verbosity detailed /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=./Results/
         .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+    # - name: Install Code Coverage tool
+    #     shell: powershell
+    #     run: dotnet tool install --global JetBrains.dotCover.GlobalTool
+    # - name: Build and analyze
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #   shell: powershell
+    #   run: |
+    #     .\.sonar\scanner\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+    #      dotnet restore
+    #      dotnet build --no-restore 
+    #      dotnet dotcover test --dcReportType=HTML 
+    #     .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
