--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -28,9 +28,16 @@ jobs:
     - name: Build the application
       run: dotnet build --no-restore --configuration release
 
+    - name: List files before tests
+      run: |
+        ls -R
     # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test --no-restore --verbosity detailed CatNote.Tests/CatNote.Tests.csproj
+
+    - name: List files after tests
+      run: |
+        ls -R
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -70,13 +77,13 @@ jobs:
         dotnet build --no-restore 
         dotnet test --no-restore --verbosity detailed /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=./Results/
         .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
-        
-    - name: Save coverage report as artifact
-      if: always() # Save the report even if the build or tests fail
-      uses: actions/upload-artifact@v2
-      with:
-        name: coverage-report
-        path: ./Results/*.opencover.xml
+
+    # - name: Save coverage report as artifact
+    #   if: always() # Save the report even if the build or tests fail
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: coverage-report
+    #     path: ./Results/*.opencover.xml
 
     # - name: Install Code Coverage tool
     #     shell: powershell
