--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -30,14 +30,14 @@ jobs:
 
     - name: List files before tests
       run: |
-        ls -R
+        ls -R ./Results/
     # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test --no-restore --verbosity detailed CatNote.Tests/CatNote.Tests.csproj
 
     - name: List files after tests
       run: |
-        ls -R
+        ls -R ./Results/
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
