--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -74,7 +74,9 @@ jobs:
         dotnet build --no-restore 
         dotnet dotcover test --dcReportType=HTML
         mkdir .sonarqube
+        Copy-Item -Path .\.sonar\scanner\ -Destination .sonarqube\ -Recurse
         .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+
 
 
     # - name: Save coverage report as artifact
