--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
@@ -32,49 +32,49 @@ jobs:
     - name: Execute unit tests
       run: dotnet test --no-restore --verbosity detailed CatNote.Tests/CatNote.Tests.csproj
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: 17
-        distribution: 'zulu'
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0 
-    - name: Cache SonarCloud packages
-      uses: actions/cache@v3
-      with:
-        path: ~\sonar\cache
-        key: ${{ runner.os }}-sonar
-        restore-keys: ${{ runner.os }}-sonar
-    - name: Cache SonarCloud scanner
-      id: cache-sonar-scanner
-      uses: actions/cache@v3
-      with:
-        path: .\.sonar\scanner
-        key: ${{ runner.os }}-sonar-scanner
-        restore-keys: ${{ runner.os }}-sonar-scanner
-    - name: Install SonarCloud scanner
-      if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-      shell: powershell
-      run: |
-        New-Item -Path .\.sonar\scanner -ItemType Directory
-        dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-    - name: Install Code Coverage tool
-      shell: powershell
-      run: dotnet tool install --global JetBrains.dotCover.GlobalTool
-    - name: Build and analyze with code coverage
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        EXCLUDE_FROM_COVERAGE: ""
-      shell: powershell
-      run: |
-        mkdir .sonarqube
-        .\.sonar\scanner\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" -d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" -d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html /d:sonar.working.directory=".sonarqube"
-        dotnet restore
-        dotnet build --no-restore 
-        dotnet dotcover test --dcReportType=HTML
-        .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+    # - name: Set up JDK 17
+    #   uses: actions/setup-java@v3
+    #   with:
+    #     java-version: 17
+    #     distribution: 'zulu'
+    # - uses: actions/checkout@v3
+    #   with:
+    #     fetch-depth: 0 
+    # - name: Cache SonarCloud packages
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: ~\sonar\cache
+    #     key: ${{ runner.os }}-sonar
+    #     restore-keys: ${{ runner.os }}-sonar
+    # - name: Cache SonarCloud scanner
+    #   id: cache-sonar-scanner
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: .\.sonar\scanner
+    #     key: ${{ runner.os }}-sonar-scanner
+    #     restore-keys: ${{ runner.os }}-sonar-scanner
+    # - name: Install SonarCloud scanner
+    #   if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+    #   shell: powershell
+    #   run: |
+    #     New-Item -Path .\.sonar\scanner -ItemType Directory
+    #     dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+    # - name: Install Code Coverage tool
+    #   shell: powershell
+    #   run: dotnet tool install --global JetBrains.dotCover.GlobalTool
+    # - name: Build and analyze with code coverage
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #     EXCLUDE_FROM_COVERAGE: ""
+    #   shell: powershell
+    #   run: |
+    #     mkdir .sonarqube
+    #     .\.sonar\scanner\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" -d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" -d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html /d:sonar.working.directory=".sonarqube"
+    #     dotnet restore
+    #     dotnet build --no-restore 
+    #     dotnet dotcover test --dcReportType=HTML
+    #     .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
 
 
 
