--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,21 +1,27 @@
 name: SonarCloud
 on:
   pull_request:
-      branches: ["main"]
-      
+    branches: ["main"]
+
 jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
     steps:
-      - name: Set up .Net SDK 8.0
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: 8.0
-          distribution: 'dotnet'
+          java-version: 17
+          distribution: "zulu"
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  
+          fetch-depth: 0
+
+      # Install the .NET Core workload
+      - name: Install .NET Core
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8.x
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -42,12 +48,13 @@ jobs:
       - name: Install Code Coverage tool
         shell: powershell
         run: dotnet tool install --global JetBrains.dotCover.GlobalTool
-        
+
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          EXCLUDE_FROM_COVERAGE: "**/Program.cs, **/Middlewares/, **/Validators/, **/Extensions/*,
+          EXCLUDE_FROM_COVERAGE:
+            "**/Program.cs, **/Middlewares/, **/Validators/, **/Extensions/*,
             **/Exceptions/, **/Constants/, **/Mappers/, **/Context/**/, **/Migrations/*,
             **/Configuration/, **/FixtureCustomizations/, **/Managers/*"
         shell: powershell
@@ -57,4 +64,3 @@ jobs:
           dotnet build --no-restore
           dotnet dotcover test --dcReportType=HTML
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
-
