--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -28,9 +28,9 @@ jobs:
     - name: Build the application
       run: dotnet build --no-restore --configuration release
 
-    # Execute all unit tests in the solution
-    - name: Execute unit tests
-      run: dotnet test --no-restore --verbosity detailed CatNote.Tests/CatNote.Tests.csproj
+     # Execute all tests in the solution
+    - name: Execute tests
+      run: dotnet test --no-restore --verbosity detailed
 
     # - name: Set up JDK 17
     #   uses: actions/setup-java@v3
