--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -33,7 +33,7 @@ jobs:
       run: dotnet test --no-restore --verbosity detailed CatNote.Tests/CatNote.Tests.csproj
 
     - name: Execute integration tests
-      run: dotnet test --no-restore --verbosity detailed CatNote.IntegrationTests/CatNote.IntegrationTests.csproj
+      run: dotnet test --no-restore --verbosity --configuration release detailed CatNote.IntegrationTests/CatNote.IntegrationTests.csproj
 
     # - name: Set up JDK 17
     #   uses: actions/setup-java@v3
