--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -56,7 +56,7 @@ jobs:
             "**/Program.cs, **/Middlewares/, **/Validators/, **/Extensions/*,
             **/Exceptions/, **/Constants/, **/Mappers/, **/Context/**/, **/Migrations/*,
             **/Configuration/, **/FixtureCustomizations/, **/Managers/*"
-        shell: powershell
+        shell: cmd
         run: |
           dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
           dotnet restore
