--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -54,7 +54,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           EXCLUDE_FROM_COVERAGE:
             "**/Program.cs, **/Middlewares/, **/Validators/, **/Extensions/*, **/Exceptions/, **/Constants/, **/Mappers/, **/Context/**/, **/Migrations/*,**/Configuration/, **/FixtureCustomizations/, **/Managers/*"
-        shell: cmd
+        shell: powershell
         run: |
           dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
           dotnet restore
