--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -43,7 +43,7 @@ jobs:
         shell: powershell
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool install --global dotnet-sonarscanner --add-source 'https://api.nuget.org/v3/index.json' --ignore-failed-sources
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
       - name: Install Code Coverage tool
         shell: powershell
         run: dotnet tool install --global JetBrains.dotCover.GlobalTool
