--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -46,6 +46,7 @@ jobs:
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
 
       - name: Install Code Coverage tool
+        working-directory: ${{ github.workspace }}
         shell: powershell
         run: dotnet tool install --global JetBrains.dotCover.GlobalTool
 
