change Build and analyze

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -53,10 +53,10 @@ jobs:
         shell: powershell
         run: |
           dotnet tool restore
-          $toolPath = Get-Command dotnet-sonarscanner | ForEach-Object { Split-Path $_.Source }
-          $sonarScannerPath = Join-Path $toolPath ".store\dotnet-sonarscanner\5.2.2\dotnet-sonarscanner\5.2.2\tools\net5.0\any"
-          & $sonarScannerPath\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
+          $toolPath = Join-Path $env:USERPROFILE ".dotnet\tools"
+          $sonarScannerPath = Join-Path $toolPath "dotnet-sonarscanner"
+          & $sonarScannerPath begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
           dotnet restore
           dotnet build --no-restore
           dotnet dotcover test --dcReportType=HTML
-          & $sonarScannerPath\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          & $sonarScannerPath end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
