--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -81,11 +81,7 @@ jobs:
         with:
           name: sonarcloud-files
           path: |
-            .sonarqube/0/FilesToAnalyze.txt
-            .sonarqube/0/ProjectOutFolderPath.txt
-            .sonarqube/0/SonarProjectConfig.xml
-            .sonarqube/0/cs/SonarLint.xml
-            .sonarqube/0/vbnet/SonarLint.xml
+            D:\.sonarqube\conf\0\FilesToAnalyze.txt
 
       # - name: Report
       #   uses: actions/upload-artifact@v3
