fix update tests

--- a/CatNote.Tests/CatNote.Tests.csproj
+++ b/CatNote.Tests/CatNote.Tests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CatNote.BLL\CatNote.BLL.csproj" />
+    <ProjectReference Include="..\CatNote.Domain\CatNote.Domain.csproj" />
   </ItemGroup>
 
 </Project>
