Feature/nmd 465 add integration tests (#17)
* Replace Mapper by Automapper

* Write Unit tests

* add FluentAssertions

* Add Integration tests

* add IntegrationTestsDelete

* add tests for achievement and task

* Create dotnet-desktop.yml

* change 8.0.x to 8.x

* fix some exeption dotnet-desktop.yml

* change path

* without sonar

* change windows to ubuntu, delete env

* add configuration

* move matrix

* Revert "move matrix"

This reverts commit 833ad17d0f06cbd441d6decc84fa03af88317f1c.

* add build configuration resease

* add no restore

* fixed bug

* delete strategy

* fix bug with release

* add matrix

* add strategy

* add details in tests

* add Detailed

* add address

* change address to CatNote.Tests/CatNote.Tests.csproj

* add sonar

* without shell: powershell

* edit run

* add shell: powershell

* change run

* update run

* add build

* change install sonarCloud scanner

* add angle brackets

* add terminal

* add cmd

* delete shell

* add bash

* change run

* update run in Build and analyze

* use windows

* change run in Build and analyze

* try from beginning

* add Restore NuGet package

* change run

* delete comment

* add install Code Coverage tool

* Revert "add install Code Coverage tool"

This reverts commit be9d8ee17dfbe53e5eb9ec11fe4cdcbbef3f2c6f.

* add Install Code Coverage tool try 2

* add Build and analyze with code coverage

* remove space

* try to add artifact

* output information

* add ./Results/

* Revert "remove space"

This reverts commit 2da2504bde334879d4d4187088e13a27d152fd44.

* add dotcover

* delete list file

* change build and analyze with code coverage

* add mkdir .sonarqube

* add Copy-Item

* change run

* change Build and analyze

* add mkdir .sonarqube

* delete sonar

* add sonar to separate file

* change run in install SonarCloud scanner

* use Net SDK 8.0

* 

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Build the application
       run: dotnet build --no-restore --configuration release
 
-    # Execute all unit tests in the solution
+     # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test --no-restore --verbosity detailed CatNote.Tests/CatNote.Tests.csproj
+
+    - name: Execute integration tests
+      run: dotnet test --no-restore --verbosity detailed CatNote.IntegrationTests/CatNote.IntegrationTests.csproj
