--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,7 +2,6 @@ name: SonarCloud
 on:
   pull_request:
     branches: ["main"]
-
 jobs:
   build:
     name: Build and analyze
@@ -17,7 +16,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Install the .NET Core workload
       - name: Install .NET Core
         uses: actions/setup-dotnet@v3
         with:
@@ -39,11 +37,9 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar-scanner
 
       - name: Install SonarCloud scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
         shell: powershell
         run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool install --global dotnet-sonarscanner --add-source 'https://api.nuget.org/v3/index.json' --ignore-failed-sources
+          dotnet tool install --global dotnet-sonarscanner
 
       - name: Install Code Coverage tool
         shell: powershell
@@ -54,13 +50,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           EXCLUDE_FROM_COVERAGE:
-            "**/Program.cs, **/Middlewares/, **/Validators/, **/Extensions/*,
-            **/Exceptions/, **/Constants/, **/Mappers/, **/Context/**/, **/Migrations/*,
-            **/Configuration/, **/FixtureCustomizations/, **/Managers/*"
+            "**/Program.cs, **/Middlewares/*, **/Validators/*, **/Exceptions/*, **/Mappers/*, **/Migrations/*"
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}"  /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
+          dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}"  /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
           dotnet restore
-          dotnet build --no-restore
-          dotnet dotcover test --dcReportType=HTML
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          dotnet dotcover build --no-restore
+          dotnet dotcover test --no-build --dcReportType=HTML --logger "console;verbosity=normal"
+          dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
