--- a/backend/CatNote.API/appsettings.json
+++ b/backend/CatNote.API/appsettings.json
@@ -11,6 +11,7 @@
   },
   "Auth0": {
     "Domain": "dev-ujxvenaomkidb36h.us.auth0.com",
-    "Audience": "https://localhost:7165/api"
+    "Audience": "https://localhost:7165/api",
+    "ClientSecret": "gubU2x4y4BLLkCbjtsdeMJiQgSHjhOUW6O06y9bn9vkUbZw_8MDfAmGMQwzh82kb"
   }
 }
