--- a/backend/CatNote.API/appsettings.json
+++ b/backend/CatNote.API/appsettings.json
@@ -12,6 +12,7 @@
   "Auth0": {
     "Domain": "dev-ujxvenaomkidb36h.us.auth0.com",
     "Audience": "https://localhost:7165/api",
-    "ClientSecret": "gubU2x4y4BLLkCbjtsdeMJiQgSHjhOUW6O06y9bn9vkUbZw_8MDfAmGMQwzh82kb"
+    "ClientSecret": "gubU2x4y4BLLkCbjtsdeMJiQgSHjhOUW6O06y9bn9vkUbZw_8MDfAmGMQwzh82kb",
+    "ClientId": "knfixJWkPdQbohcN2J6DEf5osSxY157q"
   }
 }
